template.yml
Resources:
  AppNode:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      ImageId: ami-05064bb33b40c33a2
      KeyName: Influx20
      SecurityGroups:
        - !Ref AppNodeSG
      UserData: !Base64 >
        #!/bin/bash

        sudo yum update -y

        sudo yum install docker -y

        sudo service docker start

        sudo usermod -a -G docker ec2-user

        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
        
        sudo chmod +x /usr/local/bin/docker-compose

        yum install git -y
        
        cd /home/ec2-user
        
        git clone https://github.com/cypernex/smartsite.git

        chmod -R 777 /home/ec2-user/smartsite
        
        curl -o docker-compose.yml https://raw.githubusercontent.com/cypernex/docker-compose/master/tingstack.yml

        docker-compose up -d
        
  AppNodeSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: for the app nodes that allow ssh
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8086'
          ToPort: '8086'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '3000'
          ToPort: '3000'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '1880'
          ToPort: '1880'
          CidrIp: 0.0.0.0/0
